--- a/print0.html
+++ b/print0.html
@@ -86,8 +86,8 @@ const firstBlock = [
 ];
 
 const secondBlock = [
-    `"knock knock...?"`,
-    `"it's Mei!!!!!! happy birthday to you, Urie , cherish every moment , best wishes to you! tui tin ban se thanh cong hon trong cuoc song va song healthy len ok? "`,
+    `"knock knock..."`,
+    `"it's Mei!!!!!! happy birthday to you, Urie 🎂, cherish every moment you have, best wishes to you! (vietnamese version) chuc mung sinh nhat con chien that lac Urie tui tin ban se thanh cong hon trong cuoc song va song healthy len ok"`,
     
 ];
 
@@ -163,7 +163,7 @@ function showButton() {
     box.id = "buttonBox";
 
     const btn = document.createElement("button");
-    btn.textContent = "who's there";
+    btn.textContent = "who's there?";
 
     btn.onclick = (e) => {
         e.stopPropagation();
